force-app/main/default/objects/Order__c/fields/Order_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Order_Type_c__c</fullName>
    <label>Order_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>