force-app/main/default/objects/Order__c/validationRules/Prevent_Completion_Without_Paid_Invoices.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Completion_Without_Paid_Invoices</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL( Status__c , &quot;Completed&quot;),
      Paid_Invoice_Count__c  = 0
    )</errorConditionFormula>
    <errorMessage>An Order cannot be completed without at least one paid Invoice.</errorMessage>
</ValidationRule>