force-app/main/default/objects/Order__c/validationRules/Prevent_Reverse_Order_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Reverse_Order_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISCHANGED(Status__c),
  ISPICKVAL(Status__c, &quot;Draft&quot;),
  TEXT(PRIORVALUE(Status__c)) = &quot;Activated&quot;,
  Invoice_Count__c &gt; 0
)</errorConditionFormula>
    <errorMessage>You cannot revert an Order to Draft once invoices have been created.</errorMessage>
</ValidationRule>